@@ -1,8 +1,9 @@
 2009-07-07  Jeroen T. Vermeulen <jtv@xs4all.nl>
  include/pqxx/cursor.hxx,
  include/pqxx/internal/gates/icursorstream_icursor_iterator.hxx,
+ include/pqxx/internal/gates/icursor_iterator-icursorstream.hxx,
  src/cursor.cxx:
- - Another call gate.
+ - More call gates.
 2009-07-07  Jeroen T. Vermeulen <jtv@xs4all.nl>
  include/pqxx/connection_base.hxx,
  include/pqxx/internal/gates/connection-reactivation_avoidance_exemption.hxx,
